enh: Add reminder highlights (eg. TODO, FIXME)
- Reminder color:
    - foreground: brightwhite
    - background: yellow

--- a/Dockerfile.nanorc
+++ b/Dockerfile.nanorc
@@ -13,6 +13,9 @@ color brightmagenta "&&"
 ## Comments
 icolor cyan "^[[:space:]]*#.*$"
 
+## Reminders
+color brightwhite,yellow "\<(FIXME|TODO|XXX)\>"
+
 ## Blank space at EOL
 color ,green "[[:space:]]+$"
 
