--- a/makefile.nanorc
+++ b/makefile.nanorc
@@ -2,6 +2,7 @@ syntax "Makefile" "([Mm]akefile|\.ma?k)$"
 header "^#!.*/(env +)?[bg]?make( |$)"
 magic "makefile script"
 comment "#"
+tabgives "	"
 
 color cyan  "\<(ifeq|ifdef|ifneq|ifndef|else|endif)\>"
 color cyan  "^(export|include|override)\>"
